WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209976
ASSERTION FAILED: objectStoreInfo in SQLiteIDBBackingStore::getRecord
https://bugs.webkit.org/show_bug.cgi?id=209976
Summary
ASSERTION FAILED: objectStoreInfo in SQLiteIDBBackingStore::getRecord
Sihui Liu
Reported
2020-04-03 10:39:40 PDT
Normally this assertion will not be hit, but we see cases where objectStoreInfo is null as in the radar. So I tried to modify the code a bit by returning error at specific places, and successfully got the assertion failure. Therefore, theoretically it's possible that SQLiteIDBBackingStore does not have requested ObjectStoreInfo in SQLiteIDBBackingStore::getRecord. Then we need to change this assertion to an error and make early return.
Attachments
Patch
(2.41 KB, patch)
2020-04-03 10:45 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2020-04-03 10:40:04 PDT
<
rdar://problem/55005363
>
Sihui Liu
Comment 2
2020-04-03 10:45:39 PDT
Created
attachment 395395
[details]
Patch
Geoffrey Garen
Comment 3
2020-04-03 11:56:19 PDT
Comment on
attachment 395395
[details]
Patch r=me
EWS
Comment 4
2020-04-03 15:56:03 PDT
Committed
r259519
: <
https://trac.webkit.org/changeset/259519
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395395
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug