Cherry-pick r259519. rdar://problem/61352446

ASSERTION FAILED: objectStoreInfo in SQLiteIDBBackingStore::getRecord
    https://bugs.webkit.org/show_bug.cgi?id=209976
    <rdar://problem/55005363>

    Reviewed by Geoffrey Garen.

    Return error if objectStoreInfo is null in SQLiteIDBBackingStore::getRecord, because there is a possibility
    SQLiteIDBBackingStore does not have requested objectStoreInfo.

    * Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
    (WebCore::IDBServer::SQLiteIDBBackingStore::getRecord):

    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259519 268f45cc-cd09-0410-ab3c-d52691b4dbfc

git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@259603 268f45cc-cd09-0410-ab3c-d52691b4dbfc